--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -3,18 +3,25 @@
   <h2>
     Edit Post
   </h2>
-  <form class="edit-post-form">
-    <div>
-      <input name="post-title" type="text" value="{{post.title}}" />
-      <span>({{format_url post.post_url}})</span>
+   <form class="edit-post-form">
+    <div class="field">
+      <label class="label" for="post-title">Title</label>
+      <input class="input" type="text" id="post-title" name="post-title" value="{{post.title}}" />
+    </div>
+    
+    <div class="field">
+      <label class="label" for="post-description">Description</label>
+        <div class="control">
+           <textarea id="post-description" class="textarea" placeholder="Textarea"></textarea>
+         </div>
     </div>
     <div>
-      {{post.vote_count}} {{format_plural "point" post.vote_count}} by you on {{format_date post.created_at}}
-      |
       <a href="/post/{{post.id}}">{{post.comments.length}} {{format_plural "comment" post.comments.length}}</a>
     </div>
-    <button type="submit">Save post</button>
-    <button type="button" class="delete-post-btn">Delete post</button>
+    <br>
+    <button class="button is-fullwidth is-success" type="submit">Update Post</button>
+    <br>
+    <button class="delete-post-btn button is-fullwidth is-danger" type="button" >Delete post</button>
   </form>
 </article>
 
@@ -24,7 +31,7 @@
   </div>
 
   <div>
-    <button type="submit">add comment</button>
+    <button type="submit">Add comment</button>
   </div>
 </form>
 
