--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,25 +5,31 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Tech Blog</title>
+      <link
+      rel="icon"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💻</text></svg>"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
+    />
   <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
-  <div class="wrapper">
     <header>
-      <h1>
-        <a href="/">The Tech Blog</a>
-      </h1>
+      <h1 class="is-size-1">The Tech Blog</h1>
       <nav>
+        <a href="/">Home</a>
         {{#if loggedIn}}
-        <a href="/dashboard">dashboard</a>
-        <button id="logout" class="btn-no-style">logout</button>
+        <a href="/dashboard">Dashboard</a>
+        <button id="logout" class="btn-no-style">Logout</button>
         {{else}}
-        <a href="/login">login</a>
+        <a href="/login">Login</a>
         {{/if}}
       </nav>
     </header>
-    <main>
+    <main class="has-background-grey-lighter">
       {{{ body }}}
     </main>
     <footer>
