--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,21 +1,29 @@
 {{> post-info post}}
 
 {{#if loggedIn}}
+<article class="post">
+  <div class="title">
+    <br>
+      </div>
+      <div style="margin: 1rem;">
 <form class="comment-form">
-  <div>
-    <textarea name="comment-body"></textarea>
-  </div>
+    <div class="field">
+      <label class="label" id="post-description">New Comment</label>
+        <div class="control">
+          <textarea name="comment-body" class="textarea" placeholder="Textarea"></textarea>
+         </div>
+    </div>
 
   <div>
-    <button type="submit">add comment</button>
-    <button type="button" class="upvote-btn">upvote</button>
+    <button class="button is-fullwidth is-dark is-large" type="submit">submit</button>
   </div>
 </form>
+      </div>
+</article>
 {{/if}}
 
 {{> comments post.comments}}
 
 {{#if loggedIn}}
 <script src="/js/comment.js"></script>
-<script src="/js/upvote.js"></script>
 {{/if}}
