--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="has-background-success">
       <h1 class="is-size-1">The Tech Blog</h1>
       <nav>
         <a href="/">Home</a>
@@ -29,7 +29,7 @@
         {{/if}}
       </nav>
     </header>
-    <main class="has-background-grey-lighter">
+    <main class="has-background-white">
       {{{ body }}}
     </main>
     <footer>
